--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,8 +3,8 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your account was successfully confirmed. You are now signed in."
-      send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
+      confirmed: "验证邮箱成功，您已登录"
+      send_instructions: "确认邮件已经发送到您的邮箱，请登录邮箱进行确认,然后就可以登录了"
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes."
     failure:
       already_authenticated: "您已经登录啦"
@@ -18,28 +18,28 @@ en:
       unconfirmed: "请先到邮箱确认您的账户"
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "[TagSlide]邮箱验证"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "[TagSlide]重置密码"
       unlock_instructions:
-        subject: "Unlock Instructions"
+        subject: "[TagSlide]账号解锁"
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions about how to reset your password in a few minutes."
+      send_instructions: "重设密码邮件已发送，请登录您的邮箱设置新密码"
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
       updated: "修改密码成功"
       updated_not_active: "修改密码成功"
     registrations:
       destroyed: "您的账户已注销，谢谢您的关注，希望我们还能再见面哦"
-      signed_up: "欢迎来到..."
+      signed_up: "欢迎来到 TagSlide"
       signed_up_but_inactive: "您已经注册成功，请到邮箱激活您的账户"
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
-      updated: "You updated your account successfully."
+      update_needs_confirmation: "您的账户信息已更新，但是需要验证新的邮箱地址，请登录您的邮箱进行验证"
+      updated: "您已成功更新账号信息"
     sessions:
       signed_in: "登录成功"
       signed_out: "您已退出"
@@ -49,10 +49,10 @@ en:
       unlocked: "Your account has been unlocked successfully. Please sign in to continue."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
+      already_confirmed: "您已经确认过，请登录试试"
+      confirmation_period_expired: "该验证请求已经过期，需要重新验证"
+      expired: "请求已经过期，需重新发送"
+      not_found: "无法找到该用户的信息，请您仔细核对输入信息"
       not_locked: "was not locked"
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
