--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -37,7 +37,7 @@ en:
       signed_up: "欢迎来到 TagSlide"
       signed_up_but_inactive: "您已经注册成功，请到邮箱激活您的账户"
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
+      signed_up_but_unconfirmed: "确认邮件已经发送到您的邮箱，请登录邮箱进行确认,然后就可以登录了"
       update_needs_confirmation: "您的账户信息已更新，但是需要验证新的邮箱地址，请登录您的邮箱进行验证"
       updated: "您已成功更新账号信息"
     sessions:
